# type_balancer

./: .clang-tidy  .gitignore  .rspec_status  .rubocop.yml  CHANGELOG.md  Dockerfile  Gemfile  README.md  Rakefile  type_balancer.gemspec
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
benchmark/: README.md  combined_benchmark.rb  decision_benchmark.rb  distributor_benchmark.rb  end_to_end_benchmark.rb  pure_c_benchmark  pure_c_benchmark.c  quick_benchmark.rb
benchmark_results/: ruby3.2.8.txt  ruby3.2.8_yjit.txt  ruby3.3.7.txt  ruby3.3.7_yjit.txt  ruby3.4.2.txt  ruby3.4.2_yjit.txt
c_tests/: .gitignore  CMakeLists.txt  build.sh  create_wrapped_headers.sh  test_distributor.cpp  test_main.cpp  test_position_adjuster.cpp  test_position_array.cpp  test_position_calculator.cpp  test_position_generator.cpp  test_sequential_filler.cpp  test_spacing_calculator.cpp  update_includes.sh
c_tests/include/: ruby_wrapper.h  test_spacing_calculator.h
c_tests/include/wrapped/: alternating_filler.h  balancer.h  distributor.h  gap_filler.h  position_adjuster.h  position_calculator.h  sequential_filler.h
c_tests/src/: spacing_calculator_test.cpp  test_spacing_calculator.c
coverage/: .last_run.json  .resultset.json  index.html
docs/: README.md  balance.md  calculate_positions.md  quality.md
docs/benchmarks/: README.md
docs/c_extensions/: distributor.md  gap_fillers.md
example/: quality.rb
examples/: balance_test_data.yml  content_feed_balancer.rb  large_scale_balance_test.rb  quality.rb
ext/type_balancer/: Makefile  alternating_filler.c  alternating_filler.h  balancer.c  distributor.c  distributor.h  extconf.rb  function_exports.h  gap_filler.c  gap_filler.h  gap_fillers_extconf.rb  init.c  item_queue.c  item_queue.h  position_adjuster.c  position_array.c  position_array.h  position_calculator.c  position_calculator.h  position_generator.c  position_generator.h  sequential_filler.c  sequential_filler.h  spacing_calculator.c  spacing_calculator.h  spacing_lookup_table.h
ext/type_balancer/type_balancer.bundle.dSYM/Contents/: Info.plist
ext/type_balancer/type_balancer.bundle.dSYM/Contents/Resources/Relocations/aarch64/: type_balancer.bundle.yml
ext/type_balancer_balancer/: Makefile  balancer.c  balancer.h  extconf.rb
ext/type_balancer_distributor/: Makefile  distributor.c  distributor.h  extconf.rb  position_adjuster.h  position_array.c  position_array.h  position_calculator.h  position_generator.c  spacing_calculator.h
lib/: type_balancer.rb
lib/type_balancer/: alternating_filler.rb  balancer.rb  batch_processing.rb  calculator.rb  configuration.rb  distribution_calculator.rb  distributor.rb  gap_fillers_ext.rb  ordered_collection_manager.rb  position_calculator.rb  pure_ruby_calculator.rb  ratio_calculator.rb  sequential_filler.rb  strategies.rb  strategy_factory.rb  type_extractor.rb  type_extractor_registry.rb  version.rb
lib/type_balancer/c/: calculator.rb
lib/type_balancer/gap_fillers/: alternating.rb  base.rb  sequential.rb
lib/type_balancer/ruby/: batch_calculator.rb  calculator.rb
lib/type_balancer/strategies/: base_strategy.rb  sliding_window_strategy.rb
sig/: type_balancer.rbs
spec/: spec_helper.rb  type_balancer_spec.rb
spec/type_balancer/: alternating_filler_spec.rb  balancer_spec.rb  calculator_spec.rb  distribution_calculator_spec.rb  distributor_spec.rb  ordered_collection_manager_spec.rb  ratio_calculator_spec.rb  sequential_filler_spec.rb  strategy_factory_spec.rb  type_extractor_registry_spec.rb  type_extractor_spec.rb
spec/type_balancer/gap_fillers/: alternating_spec.rb  base_spec.rb  sequential_spec.rb
spec/type_balancer/strategies/: base_strategy_spec.rb  sliding_window_strategy_spec.rb
test/: quality.rb
